Fix account creation spacing

--- a/src/styles/applicant.scss
+++ b/src/styles/applicant.scss
@@ -82,7 +82,7 @@
         }
     }
 
-    & > #account-creation-form {
+    & > #account-creation {
         display: grid;
         margin: auto;
         grid-row-gap: 0.2em;
